--- a/create-penggalang-dana.html
+++ b/create-penggalang-dana.html
@@ -111,47 +111,37 @@
 
         <div class="content">
             <div class="container pt-3 px-5">
-                <div class="row">
-                    <div class="col">
-                        <p class="bd-text">Buat Donasi</p>
-                    </div>
+                <div class="col">
+                    <p class="bd-text">Buat Donasi</p>
                 </div>
                 <form action="">
-                    <div class="row border-image mb-3">
-                        <div class="col p-3">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="bd-text1">Gambar Donasi<span style="color: red;">*</span></p>
-                                </div>
+                    <div class=" border-image mb-3">
+                        <div class="p-3">
+                            <div class="col">
+                                <p class="bd-text1">Gambar Donasi<span style="color: red;">*</span></p>
                             </div>
-                            <div class="row p-5">
+                            <div class="p-5">
                                 <div class="col text-center">
                                     <img src="Assets/Rectangle 33.png" alt="camera" width="70px">
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-2 offset-5 text-center">
-                                    <p class="gambar-btn">+ Pilih Gambar</p>
-                                    <!-- <input type="file" class="gambar-btn"> -->
-                                </div>
+                            <div class="col-2 offset-5 text-center">
+                                <p class="gambar-btn">+ Pilih Gambar</p>
+                                <!-- <input type="file" class="gambar-btn"> -->
                             </div>
-                            <div class="row">
-                                <div class="col-4 offset-4 text-center">
-                                    <p class="text-btn">Tambahkan hingga 5 gambar</p>
-                                </div>
+                            <div class="col-4 offset-4 text-center">
+                                <p class="text-btn">Tambahkan hingga 5 gambar</p>
                             </div>
                         </div>
                     </div>
 
 
-                    <div class="row border-image mb-3">
+                    <div class="border-image mb-3">
                         <div class="col p-3">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="bd-text1">Informasi Donasi</p>
-                                </div>
+                            <div class="col">
+                                <p class="bd-text1">Informasi Donasi</p>
                             </div>
-                            <div class="row mb-3">
+                            <div class=" mb-3">
                                 <div class="col ">
                                     <label for="kategori">Kategori<span style="color: red;">*</span></label>
                                     <select class="form-select" id="kategori" aria-label="Default select example"
@@ -163,7 +153,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="row mb-3">
+                            <div class=" mb-3">
                                 <div class="col ">
                                     <label for="judul" class="form-label mb-0">Judul Penggalangan
                                         Dana<span style="color: red;">*</span></label>
@@ -172,7 +162,7 @@
                                         placeholder="Contoh: Bantu Korban Bencana Banjir Sulteng" required>
                                 </div>
                             </div>
-                            <div class="row mb-3">
+                            <div class=" mb-3">
                                 <div class="col ">
                                     <label for="exampleFormControlTextarea1" class="form-label mb-0">Deskripsi<span
                                             style="color: red;">*</span></label>
@@ -185,12 +175,10 @@
                         </div>
                     </div>
 
-                    <div class="row border-image mb-3">
+                    <div class=" border-image mb-3">
                         <div class="col p-3">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="bd-text1">Lainnya</p>
-                                </div>
+                            <div class="col">
+                                <p class="bd-text1">Lainnya</p>
                             </div>
                             <div class="row mb-3">
                                 <div class="col ">
@@ -207,7 +195,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row mb-3">
+                            <div class=" mb-3">
                                 <div class="col ">
                                     <!-- <p class="label-name d-inline">Batas Waktu Donasi<span style="color: red;">*</span>
                                     </p>
@@ -224,7 +212,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="row mb-3">
                         <div class="col-3 text-center">
                             <img src="Assets/Group 21.png" alt="qrCode">
@@ -234,7 +221,7 @@
                             <p class="text-btn">QR digunakan sebagai link donasi</p>
                         </div>
                     </div>
-                    <div class="row mb-3">
+                    <div class=" mb-3">
                         <div class="col-4 offset-4 text-center">
                             <p class="gambar-btn-3">Buat Donasi</p>
                         </div>
