feat: forgot password

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -17,31 +17,17 @@
     </head>
     <body>
         <main>
-            <h1 style="margin-top: 100px !important;">Masuk</h1>
+            <h1 style="margin-top: 100px !important;">Lupa Password</h1>
 
             <div class="login-form">
                 <label for="email-or-num">Email atau Nomor Telepon</label><br>
                 <input type="text" name="email-or-num" id="email-or-num" required><br><br>
 
-                <label for="password">Password</label><br>
-                <input type="password" name="password" id="password" required>
-
-                <a href="home-donatur.html">
-                    <button>MASUK</button>
+                <a>
+                    <button onclick="showHidden()">Reset Password</button>
                 </a>
-                <div class="forgot-password">
-                    <a href="forgot-password.html">Lupa Password?</a>
-                </div>
-            </div>
 
-            <a href="home-donatur.html">
-                <div class="google-login-button">
-                    <img src="Assets/google-logo.png"><span>Masuk dengan google</span>
-                </div>
-            </a>
-
-            <div style="text-align: center; margin-top: 28px">
-                Belum memiliki akun DonateKUY? <a href="register.html" style="text-decoration: none;">Daftar</a>
+                <p id="para" style="visibility: hidden;margin: 0 !important;height: 0;"><br>Email berisi link reset password telah kami kirim ke email anda.</p>
             </div>
 
             <div style="text-align: center; margin-top: 137px">
@@ -49,5 +35,13 @@
                 <a href="#" style="text-decoration: none;">Segera email kami di donate.kuy@gmail.com</a>
             </div>
         </main>
+
+        <script>
+            function showHidden() {
+                var hidden = document.getElementById('para')
+                hidden.style.visibility = 'visible'
+                hidden.style.height = 'auto'
+            }
+        </script>
     </body>
 </html>
