feat: home navigation

--- a/detail-jakarta.html
+++ b/detail-jakarta.html
@@ -229,7 +229,7 @@
             <div class="agreement-modal-content">
                 <div class="agreement-modal-content-header">
                     <button id="close-modal-button"></button>
-                    <h1>User Agreement</h1>
+                    <h1>Bukti Pengiriman Donasi Kepada Korban</h1>
                     <div style="margin: 0 auto; width: 100% !important;background-color: #e6e6e6;height: 4px;"></div>
                 </div>
                 <div class="agreement-modal-content-content">
