--- a/home-penggalang-dana.html
+++ b/home-penggalang-dana.html
@@ -91,7 +91,7 @@
                     <input id="switch-checkbox" type="checkbox">
                     <span class="slider round"></span>
                 </label>
-                <h5>Donatur</h5>
+                <h5>Penggalang Dana</h5>
                 <a href="profile-notifications.html">
                     <div class="notification">
                         <img id="notif-img" src="Assets/alert.png">
