feat: search page

--- a/search.html
+++ b/search.html
@@ -107,7 +107,7 @@
 
                 <div class="charity">
                     <div class="title">
-                        <h2>Charity</h2>
+                        <h2>Hasil pencarian untuk "Banjir"...</h2>
                         <div class="filter">
                             <div>
                                 <p class="content-text-2 d-inline">Sort: </p>
