adjust: detail page

--- a/search.html
+++ b/search.html
@@ -88,7 +88,7 @@
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
                 </div>
                 <label class="switch">
-                    <input id="switch-checkbox" type="checkbox">
+                    <input id="switch-checkbox" type="checkbox" checked>
                     <span class="slider round"></span>
                 </label>
                 <h5>Donatur</h5>
