--- a/detail-jakarta.html
+++ b/detail-jakarta.html
@@ -152,67 +152,68 @@
                     <div class="donation-list">
                         <h3>Donatur</h3>
                         <div class="blue-separator-line"></div>
+                        <div class="d-list">
+                            <div class="donation">
+                                <p>Yadi</p>
+                                <p>Rp 5.000.000</p>
+                                <p>28 May 2021, 16.55 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Yadi</p>
-                            <p>Rp 50.000.000</p>
-                            <p>28 May 2021, 16.55 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Philip</p>
+                                <p>Rp 7.000.000</p>
+                                <p>28 May 2021, 16.59 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Philip</p>
-                            <p>Rp 70.000.000</p>
-                            <p>28 May 2021, 16.59 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Fernando</p>
+                                <p>Rp 5.650.000</p>
+                                <p>28 May 2021, 17.50 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Fernando</p>
-                            <p>Rp 50.650.000</p>
-                            <p>28 May 2021, 17.50 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Suprijan</p>
+                                <p>Rp 500.000</p>
+                                <p>28 May 2021, 17.55 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Suprijan</p>
-                            <p>Rp 5.000.000</p>
-                            <p>28 May 2021, 17.55 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Fikri</p>
+                                <p>Rp 10.000.000</p>
+                                <p>28 May 2021, 18.55 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Fikri</p>
-                            <p>Rp 100.000.000</p>
-                            <p>28 May 2021, 18.55 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Aughest</p>
+                                <p>Rp 5.200.000</p>
+                                <p>28 May 2021, 19.03 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Aughest</p>
-                            <p>Rp 50.200.000</p>
-                            <p>28 May 2021, 19.03 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Reinhart</p>
+                                <p>Rp 1.700.000</p>
+                                <p>28 May 2021, 19.23 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Reinhart</p>
-                            <p>Rp 10.700.000</p>
-                            <p>28 May 2021, 19.23 WIB</p>
-                        </div>
-                        <hr>
+                            <div class="donation">
+                                <p>Richard</p>
+                                <p>Rp 900.000</p>
+                                <p>28 May 2021, 20.31 WIB</p>
+                            </div>
+                            <hr>
 
-                        <div class="donation">
-                            <p>Richard</p>
-                            <p>Rp 9.000.000</p>
-                            <p>28 May 2021, 20.31 WIB</p>
-                        </div>
-                        <hr>
-
-                        <div class="donation">
-                            <p>Yohanes</p>
-                            <p>Rp 20.300.000</p>
-                            <p>28 May 2021, 20.45 WIB</p>
+                            <div class="donation">
+                                <p>Yohanes</p>
+                                <p>Rp 2.300.000</p>
+                                <p>28 May 2021, 20.45 WIB</p>
+                            </div>
                         </div>
                     </div>
 
