adjust: profile navigation

--- a/bukti-pembayaran-donasi.html
+++ b/bukti-pembayaran-donasi.html
@@ -32,19 +32,19 @@
         <div class="home-side-bar">
             <a href="home-donatur.html"><img id="img-logo" src="Assets/logo.png"></a>
             <a href="home-donatur.html">
-                <div class="home-menu">
-                    <div class="home-menu-inner">
-                        <img src="Assets/home.png">
+                <div class="home-menu-transparant">
+                    <div class="home-menu-transparant-inner" style="padding-left: 5px !important;">
+                        <img style="width: 50px !important;" src="Assets/home-fill.png">
                     </div>
-                    <h6>Home</h6>
+                    <h6 style="padding-left: 10px !important;">Home</h6>
                 </div>
             </a>
             <br><br>
 
             <a href="profile-donatur.html">
-                <div class="home-menu-transparant">
-                    <div class="home-menu-transparant-inner">
-                        <img src="Assets/ic-person-circle.png">
+                <div class="home-menu">
+                    <div class="home-menu-inner">
+                        <img src="Assets/ic-person-circle-fill.png">
                     </div>
                     <h6>Profile</h6>
                 </div>
