--- a/detail-cj.html
+++ b/detail-cj.html
@@ -140,7 +140,7 @@
                         </div>
                     </div>
 
-                    <button id="btn-donate" style="margin: 20px;">Donasi Sekarang!</button>
+                    <a href="donasi.html"><button id="btn-donate" style="margin: 20px;">Donasi Sekarang!</button></a>
 
                     <div class="donation-list">
                         <h3>Donatur</h3>
