--- a/profile-donatur.html
+++ b/profile-donatur.html
@@ -21,19 +21,19 @@
             <div class="home-side-bar">
                 <a href="home-donatur.html"><img id="img-logo" src="Assets/logo.png"></a>
                 <a href="home-donatur.html">
-                    <div class="home-menu">
-                        <div class="home-menu-inner">
-                            <img src="Assets/home.png">
+                    <div class="home-menu-transparant">
+                        <div class="home-menu-transparant-inner" style="padding-left: 5px !important;">
+                            <img style="width: 50px !important;" src="Assets/home-fill.png">
                         </div>
-                        <h6>Home</h6>
+                        <h6 style="padding-left: 10px !important;">Home</h6>
                     </div>
                 </a>
                 <br><br>
 
                 <a href="profile-donatur.html">
-                    <div class="home-menu-transparant">
-                        <div class="home-menu-transparant-inner">
-                            <img src="Assets/ic-person-circle.png">
+                    <div class="home-menu">
+                        <div class="home-menu-inner">
+                            <img src="Assets/ic-person-circle-fill.png">
                         </div>
                         <h6>Profile</h6>
                     </div>
@@ -100,14 +100,14 @@
 
             <div class="profile-submenu">
                 <div class="menus">
-                    <a href="#">
+                    <a href="profile-donatur.html">
                         <div class="submenu">
                             <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
                         </div>
                     </a>
                     <hr>
 
-                    <a href="#">
+                    <a href="profile-history.html">
                         <div class="submenu">
                             <img src="Assets/ic-history.png"><span>Donation History</span>
                         </div>
@@ -115,14 +115,14 @@
 
                     <hr>
 
-                    <a href="#">
+                    <a href="profile-notifications.html">
                         <div class="submenu">
                             <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
                         </div>
                     </a>
 
                     <hr>
-                    <a href="">
+                    <a href="profile-change-password.html">
                         <div class="submenu">
                             <img src="Assets/ic-password.png"><span>Password & Security</span>
                         </div>
@@ -180,7 +180,9 @@
                             <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nomor Telepon</label>
                             <p>0812-3456-7238</p>
                             <hr><br>
-                            <button id="btn-edit-profile">Ubah Profile</button>
+                            <a href="profile-edit.html">
+                                <button id="btn-edit-profile">Ubah Profile</button>
+                            </a>
                         </div>
                     </div>
                 </div>
