feat: history navigation adjust

--- a/bukti-pembayaran-donasi-1.html
+++ b/bukti-pembayaran-donasi-1.html
@@ -142,13 +142,12 @@
                 </div>
                 <div class="row px-5 mb-3">
                     <div class="col-4">
-                        <img src="Assets/banjir 1.png" alt="picture" width="350px" height="205px">
+                        <img src="Assets/img-banjir-2.png" alt="picture" width="350px" height="205px">
                     </div>
                     <div class="col mt-3">
-                        <p class="mb-0 bold-text">Korban Banjir Kota Cirebon</p>
+                        <p class="mb-0 bold-text">Korban Banjir Kota Jakarta</p>
                         <p class="text-secondary mb-5 mt-1">Yayasan SayaBisa</p>
-
-                        <a href="detail-cirebon.html">
+                        <a href="detail-jakarta.html">
                             <button class="btn btn-danger mt-5" style="border-radius: 8px;">Donasi Lagi</button>
                         </a>
                     </div>
