--- a/profile-history.html
+++ b/profile-history.html
@@ -158,7 +158,7 @@
                         <br><br><br>
 
                         <div class="charity-items">
-                            <a href="detail-cirebon.html" style="text-decoration: none; color: black;">
+                            <a href="bukti-pembayaran-donasi.html" style="text-decoration: none; color: black;">
                                 <div class="charity-item" style="height: auto !important;">
                                     <div class="paragraph">
                                         <h2>Korban Banjir Kota Cirebon</h2>
@@ -190,7 +190,7 @@
     
                             <br>
     
-                            <a href="detail-jakarta.html" style="text-decoration: none; color: black;">
+                            <a href="bukti-pembayaran-donasi-1.html" style="text-decoration: none; color: black;">
                                 <div class="charity-item" style="height: auto !important;">
                                     <div class="paragraph">
                                         <h2>Korban Banjir Kota Jakarta</h2>
